fix the ui menu styles
• the padding has to be on the menu wrapper inside the ui list item so the hover effect covers the whole link_list_frontend_config

--- a/web/css/admin/admin-ui.styl
+++ b/web/css/admin/admin-ui.styl
@@ -380,12 +380,12 @@ td span.remove_entry
 	border none !important
 	z-index 1001 !important
 	li.ui-menu-item
-		padding 0 3px
+		padding 0
 		margin 0
 		&:not(:last-child)
 			border-bottom 1px dotted #999
 		div.ui-menu-item-wrapper
-			padding 4px 5px
+			padding 4px 8px
 			display block
 			margin 0
 			box-sizing border-box
